--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="main.css" type="text/css">
   </head>
   <body>
-    <div id='app'>APP</div>
+    <div id='app'></div>
   </body>
   <script type="text/javascript" src='bundle.js'></script>
 </html>
