--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>title</title>
     <link rel="stylesheet" href="main.css" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Monofett' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div id='app'></div>
